welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: ';' expected but '=' found.
	for(i<-0 to y) {avance(); gauche(); avance(); droite(); t[i]=t[i+1] }
                                                                    ^