welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var y:Int=getMondehauteur
	var x:Color=getCouleurSol() 
	var T = new Array[Int](10);
	avance();
	t(0)=x ;
	avance();
	t(1)=x
	avance();
	t(2)=x
	avance();
	t(3)=x
	avance();
	t(4)=x
	avance();
	t(5)=x
	for(i<-0 to y) {avance(); gauche(); avance(); droite(); t[i]=t[i+1] }
	
	
}
